# arm-openvm

./: .gitignore  Cargo.toml  README.md  mix.exs
arm_circuits/: Cargo.toml  README.md
arm_circuits/compliance/: Cargo.toml  openvm.toml
arm_circuits/compliance/src/: build.rs  main.rs
arm_circuits/transfer_auth/: Cargo.toml  openvm.toml
arm_circuits/transfer_auth/src/: main.rs
arm_circuits/trivial_logic/: Cargo.toml  openvm.toml
arm_circuits/trivial_logic/src/: main.rs
arm_core/: Cargo.toml  compliance.vk
arm_core/src/: compliance.rs  delta.rs  error.rs  evm.rs  hash.rs  hash_to_curve.rs  instance.rs  lib.rs  nullifier_key.rs  proving.rs  resource.rs  transfer_auth.rs  tree.rs  voting.rs  witness.rs
arm_nif/: Cargo.toml
arm_nif/src/: error.rs  lib.rs  verifier.rs
arm_traits/: Cargo.toml
arm_traits/src/: compliance_instance.rs  delta.rs  hash.rs  lib.rs  nullifier_key.rs  resource.rs
arm_vm_commit/: Cargo.toml  compliance.toml  logic.toml  transfer_auth.toml
arm_vm_commit/src/: lib.rs
lib/arm_openvm/: verifier.ex
native/: arm_nif
