[package]
name = "arm_circuits"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
arm_core = { path = "../arm_core", default-features = false }
arm_traits = { path = "../arm_traits", default-features = false }
arm_vm_commit = { path = "../arm_vm_commit" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false, features = ["parallel"]}
openvm-sdk = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
openvm-sdk-config = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
# deferral / verify-stark plumbing for end-to-end inner-proof verification
openvm-deferral-circuit = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
openvm-verify-stark-circuit = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
openvm-verify-stark-host = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
eyre = "0.6"

[features]
default = []
evm = ["openvm-sdk/evm-prove"]
cuda = [
    "openvm-sdk/cuda",
    "openvm-circuit/cuda",
    "openvm-deferral-circuit/cuda",
    "openvm-verify-stark-circuit/cuda",
]

[[bin]]
name = "bench-compliance"
path = "src/bin/bench_compliance.rs"

[[bin]]
name = "bench-trivial-logic"
path = "src/bin/bench_trivial.rs"
