[package]
name = "arm_core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
arm_traits = { path = "../arm_traits" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"]}
# needed for expandmsgxmd for delta, openvm does not currently implement blocksizeuser for it's sha2
digest = { version = "0.10", default-features = false }
# for EVM-specific write encodings
alloy-sol-types = { version = "0.8", default-features = false }
# openvm host dependencies
# openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.1" }
# openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v2.0.0-beta.1" }
#proof-deferral dependency
openvm-verify-stark-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.2"}
#sha2 dependencies
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.2"}
#keccak dependencies
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.2", package = "openvm-keccak256"}
# ec dependencies
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.2"}
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.2"}
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.2", package = "k256"}
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"], optional = true }
# XMD expander from the `elliptic-curve` crate; used by `hash_to_curve.rs`.
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve"] }

thiserror = { version = "2.0.6", default-features = false }

[features]
default = ["host"]
host = ["dep:k256"]