[package]
name = "arm_core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
arm_traits = { path = "../arm_traits" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"]}
serde-big-array = { version = "0.5", default-features = false }
# the expand_message_xmd keccak wrapper needs the digest block-size traits
digest = { version = "0.10", default-features = false }
# for EVM-specific write encodings
alloy-sol-types = { version = "0.8", default-features = false }
# EVM forwarder-calldata ABI encoding
alloy-primitives = { version = "0.8", default-features = false, optional = true }
# openvm host dependencies
# openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.1" }
# openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v2.0.0-beta.1" }
#proof-deferral dependency
openvm-verify-stark-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "f08f0fe"}
#keccak dependencies
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", rev = "f08f0fe", package = "openvm-keccak256"}
# ec dependencies
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "f08f0fe"}
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "f08f0fe"}
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", rev = "f08f0fe", package = "k256"}
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"], optional = true }
openvm-verify-stark-host = { git = "https://github.com/openvm-org/openvm.git", rev = "f08f0fe", optional = true }
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false, optional = true }
p3-field = { version = "0.4.1", optional = true }
bincode = { version = "2.0", features = ["serde"], optional = true }
# XMD expander from the `elliptic-curve` crate; used by `hash_to_curve.rs`.
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve"] }

thiserror = { version = "2.0.6", default-features = false }

[features]
default = ["host"]
host = ["dep:k256", "dep:openvm-verify-stark-host", "dep:openvm-stark-backend", "dep:p3-field", "dep:bincode"]
transfer_auth = ["openvm-k256/ecdsa", "dep:alloy-primitives"]