[package]
name = "arm_vm_commit"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
openvm-sdk-config = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
openvm-recursion-circuit = { git = "https://github.com/openvm-org/openvm", rev = "a8262d0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false , features = ["parallel"]}
p3-field = "0.4.1"
eyre = "0.6"

[[bin]]
name = "print-logic-vm-commit"
path = "src/bin/print.rs"