[package]
name = "arm_vm_commit"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }
openvm-sdk-config = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }
openvm-recursion-circuit = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }
openvm-deferral-circuit = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }
openvm-verify-stark-circuit = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }
openvm-verify-stark-host = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false , features = ["parallel"]}
p3-field = "0.4.1"
eyre = "0.6"
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
bincode = { version = "2.0", features = ["serde"] }

[[bin]]
name = "print-logic-vm-commit"
path = "src/bin/print.rs"

[[bin]]
name = "print-compliance-vm-commit"
path = "src/bin/print_compliance.rs"

[[bin]]
name = "print-compliance-vk"
path = "src/bin/print_compliance_vk.rs"

[[bin]]
name = "print-transfer-auth-vm-commit"
path = "src/bin/print_transfer_auth.rs"