[workspace]

[package]
name = "compliance-guest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anoma/arm-openvm"

[build-dependencies]
openvm-build = { git = "https://github.com/openvm-org/openvm", tag = "v2.0.0-beta.2" }

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm", tag = "v2.0.0-beta.2", features = ["std"]}
arm_core = { path = "../../arm_core", default-features = false }
# for writing instance data
alloy-sol-types = { version = "0.8", default-features = false }
# for reading witness data
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

# possibly needed for openvm std
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm", tag = "v2.0.0-beta.2" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm", tag = "v2.0.0-beta.2" }
openvm-k256 = { git = "https://github.com/openvm-org/openvm", tag = "v2.0.0-beta.2", package = "k256" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1