[workspace]

[package]
name = "trivial-logic-guest"
version = "0.1.0"
edition = "2021"

[build-dependencies]
openvm-build = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe" }

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm", rev = "f08f0fe", features = ["std"]}
arm_core = { path = "../../arm_core", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

# for writing instance data
alloy-sol-types = { version = "0.8", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
